--- a/labs/lab07/frontend/.github/workflows/deploy.yml
+++ b/labs/lab07/frontend/.github/workflows/deploy.yml
@@ -32,4 +32,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: labs/lab07/frontend/build/web
+          publish_dir: labs/lab07/frontend/lib
