--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,10 +5,11 @@ on:
     branches:
       - lab07-poltorakova-irina
 
+  workflow_dispatch:
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -16,17 +17,16 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.22.0'
-
-      - name: Enable web support
-        run: flutter config --enable-web
+          flutter-version: '3.16.9'
 
       - name: Install dependencies
         run: flutter pub get
         working-directory: labs/lab07/frontend
 
       - name: Build web
-        run: flutter build web --release
+        run: |
+          flutter create . --platforms web
+          flutter build web --base-href /sum25-go-flutter-course/
         working-directory: labs/lab07/frontend
 
       - name: Deploy to GitHub Pages
