--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - lab07-poltorakova-irina
-
   workflow_dispatch:
 
 jobs:
@@ -17,7 +16,8 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.16.9'
+          channel: stable
+          flutter-version: 3.32.4
 
       - name: Install dependencies
         run: flutter pub get
